Organization Dashboard modified

--- a/templates/health/dashboard_org.html
+++ b/templates/health/dashboard_org.html
@@ -16,8 +16,8 @@
          </table>
      </div>
      <div style="padding-top: 25px; text-align: center">
-         <div><span style="font-size: 20px;">Number of Users: <span>10</span></span></div>
-         <div><span style="font-size: 20px">Number of Tests: <span>100</span></span></div>
+         <div><span style="font-size: 20px;">Number of Users: <span>{{ total_user }}</span></span></div>
+         <div><span style="font-size: 20px">Number of Tests: <span>{{ total_tests }}</span></span></div>
      </div>
         <div class="table-responsives" style="padding-top: 100px; padding-left: 10px; padding-right: 10px">
             <div id="example_wrapper" class="dataTables_wrapper form-inline dt-bootstrap">
