alert message for client exist changed

--- a/templates/health/health_report.html
+++ b/templates/health/health_report.html
@@ -31,7 +31,7 @@
                     <div class="col-sm-12 report_table">
 
                         <table id="dt-userdetails" class="table table-striped"
-                               style="font-size: 12px; width: 100%; margin-top: 45px; margin-bottom: 45px" role="grid"
+                               style="color:#236d00; font-size: 12px; width: 100%; margin-top: 45px; margin-bottom: 45px" role="grid"
                                aria-describedby="example_info">
                             <thead>
                             <tr role="row"  style="text-align: center">
@@ -88,7 +88,7 @@
 
 
                         <table id="dt-report" class="table table-bordered table-striped"
-                               style="font-size: 12px; width: 100%; margin-top: 45px; margin-bottom: 45px" role="grid" aria-describedby="example_info">
+                               style="color:#236d00; font-size: 12px; width: 100%; margin-top: 45px; margin-bottom: 45px" role="grid" aria-describedby="example_info">
 
                             <tr style="text-align: center">
                                 <th>Date</th><th>Device</th><th>Test</th>
